Refactoriza 'application.properties' y 'Curso'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8002
 
 ##Database Config
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:5432/msvv_cursos
+spring.datasource.url=jdbc:postgresql://localhost:5432/msvc_cursos
 spring.datasource.username=postgres
 spring.datasource.password=Duvan$290819
 spring.datasource.driver-class-name=org.postgresql.Driver
